@@ -3,6 +3,7 @@
 	- iana portlist updated.
 	- autotrust options: add-holddown, del-holddown, keep-missing.
 	- autotrust store revoked status of trust points.
+	- ctime_r compat definition.
 
 24 August 2009: Wouter
 	- cleaner memory allocation on exit. autotrust test routines.
